--- a/packages/common/examples/getItemInfo/index.html
+++ b/packages/common/examples/getItemInfo/index.html
@@ -46,6 +46,7 @@
   <script>
     var goFcn;
 
+    var package_path = window.location.pathname.substring(0, window.location.pathname.lastIndexOf('/'));
     require.config({
       paths: {
         "@esri/arcgis-rest-auth": "https://unpkg.com/@esri/arcgis-rest-auth@2.9.0/dist/umd/auth.umd.min",
@@ -54,7 +55,7 @@
         "@esri/arcgis-rest-request": "https://unpkg.com/@esri/arcgis-rest-request@2.9.0/dist/umd/request.umd.min",
         "@esri/arcgis-rest-service-admin": "https://unpkg.com/@esri/arcgis-rest-service-admin@2.9.0/dist/umd/service-admin.umd.min",
 
-        "@esri/solution-common": "https://unpkg.com/@esri/solution-common@0.8.4/dist/umd/common.umd.min"
+        "@esri/solution-common": package_path + "/node_modules/@esri/solution-common/dist/umd/common.umd.min"
       }
     });
 
