Removed unused config entry

--- a/packages/common/examples/getItemInfo/index.html
+++ b/packages/common/examples/getItemInfo/index.html
@@ -53,9 +53,7 @@
         "@esri/arcgis-rest-feature-layer": "https://unpkg.com/@esri/arcgis-rest-feature-layer@2.9.0/dist/umd/feature-layer.umd.min",
         "@esri/arcgis-rest-portal": "https://unpkg.com/@esri/arcgis-rest-portal@2.9.0/dist/umd/portal.umd.min",
         "@esri/arcgis-rest-request": "https://unpkg.com/@esri/arcgis-rest-request@2.9.0/dist/umd/request.umd.min",
-        "@esri/arcgis-rest-service-admin": "https://unpkg.com/@esri/arcgis-rest-service-admin@2.9.0/dist/umd/service-admin.umd.min",
-
-        "@esri/solution-common": package_path + "/node_modules/@esri/solution-common/dist/umd/common.umd.min"
+        "@esri/arcgis-rest-service-admin": "https://unpkg.com/@esri/arcgis-rest-service-admin@2.9.0/dist/umd/service-admin.umd.min"
       }
     });
 
