--- a/packages/common/examples/sanitizer/index.html
+++ b/packages/common/examples/sanitizer/index.html
@@ -55,7 +55,7 @@
         function go () {
           var sanitizer = new htmlSanitizer();
 
-          document.getElementById("sanitized").value = sanitizer.sanitize(document.getElementById("source").value)
+          document.getElementById("sanitized").value = sanitizer.sanitize(document.getElementById("source").value);
           document.getElementById("output").style.display = "block";
         }
       }
