Minor adjustment to example UI

--- a/packages/common/examples/sanitizer/index.html
+++ b/packages/common/examples/sanitizer/index.html
@@ -26,14 +26,14 @@
 </head>
 <body>
   <div id="input" style="display:none">
-    <label for="source">HTML to sanitize:&nbsp;</label><br />
-    <textarea id="source" style="width:90%"></textarea>
+    <label for="source">HTML or JSON to sanitize:&nbsp;</label><br />
+    <textarea rows=10 id="source" style="width:90%"></textarea>
     <br /><br />
     <button onclick="goFcn()">Go</button>
     <br /><br />
   </div>
   <div id="output" style="display:none">
-    <textarea id="sanitized" style="width:90%"></textarea>
+    <textarea rows=10 id="sanitized" style="width:90%"></textarea>
   </div>
 
   <script src="lib/require.js"></script>
