Switched examples to use minimized solution.js

--- a/packages/creator/examples/createSolution/index.html
+++ b/packages/creator/examples/createSolution/index.html
@@ -55,13 +55,13 @@
         "@esri/arcgis-rest-request": "https://unpkg.com/@esri/arcgis-rest-request@2.11.0/dist/umd/request.umd.min",
         "@esri/arcgis-rest-service-admin": "https://unpkg.com/@esri/arcgis-rest-service-admin@2.11.0/dist/umd/service-admin.umd.min",
 
-        "@esri/solution-common": package_path + "/lib/common.umd",
-        "@esri/solution-creator": package_path + "/lib/creator.umd",
-        "@esri/solution-feature-layer": package_path + "/lib/feature-layer.umd",
-        "@esri/solution-file": package_path + "/lib/file.umd",
-        "@esri/solution-group": package_path + "/lib/group.umd",
-        "@esri/solution-simple-types": package_path + "/lib/simple-types.umd",
-        "@esri/solution-storymap": package_path + "/lib/storymap.umd"
+        "@esri/solution-common": package_path + "/lib/common.umd.min",
+        "@esri/solution-creator": package_path + "/lib/creator.umd.min",
+        "@esri/solution-feature-layer": package_path + "/lib/feature-layer.umd.min",
+        "@esri/solution-file": package_path + "/lib/file.umd.min",
+        "@esri/solution-group": package_path + "/lib/group.umd.min",
+        "@esri/solution-simple-types": package_path + "/lib/simple-types.umd.min",
+        "@esri/solution-storymap": package_path + "/lib/storymap.umd.min"
       }
     });
 
