--- a/packages/common/examples/getGUID/index.html
+++ b/packages/common/examples/getGUID/index.html
@@ -43,7 +43,7 @@
         "@esri/arcgis-rest-request": "https://unpkg.com/@esri/arcgis-rest-request@2.11.0/dist/umd/request.umd.min",
         "@esri/arcgis-rest-service-admin": "https://unpkg.com/@esri/arcgis-rest-service-admin@2.11.0/dist/umd/service-admin.umd.min",
 
-        "@esri/solution-common": package_path + "/lib/common.umd"
+        "@esri/solution-common": package_path + "/lib/common.umd.min"
       }
     });
 
