--- a/guides/index.html
+++ b/guides/index.html
@@ -100,7 +100,7 @@
     <div class="column-18">
       <div class="panel">
         <h1>Get Started</h1>
-<p>ArcGIS REST JS can be deployed with a variety of build tools, including:</p>
+<p>Solutions.js can be deployed with a variety of build tools, including:</p>
 <ul>
 <li><a href="./from-a-cdn/">From a CDN</a></li>
 <li><a href="./bundlers/">webpack, Rollup and Parcel</a></li>
@@ -109,7 +109,7 @@
 <li><a href="./whats-new-v2-0/">What's New in <code>v2.0.0</code>?</a></li>
 </ul>
 <h2>Requirements</h2>
-<p>ArcGIS REST JS takes advantage of web standards that are supported in all modern desktop browsers and most mobile browsers.</p>
+<p>Solutions.js takes advantage of web standards that are supported in all modern desktop browsers and most mobile browsers.</p>
 <ul>
 <li><a href="https://caniuse.com/#feat=fetch"><code>Fetch</code> Support</a></li>
 <li><a href="https://caniuse.com/#feat=promises"><code>Promises</code> Support</a></li>
@@ -117,22 +117,16 @@
 <li><a href="https://caniuse.com/#feat=es5"><code>ECMAScript 5</code> Support</a></li>
 </ul>
 <h2>Browser Support</h2>
-<p>ArcGIS REST JS is supported in the same browsers as the <a href="https://developers.arcgis.com/javascript/latest/guide/system-requirements/index.html#supported-browsers">ArcGIS API for JavaScript</a>.</p>
+<p>Solutions.js is supported in</p>
 <ul>
 <li>Chrome</li>
-<li>Edge</li>
+<li>Chromium Edge</li>
 <li>Firefox</li>
 <li>Safari 9 and later</li>
 <li>iOS Safari</li>
-<li>IE11</li>
-</ul>
-<p>IE11 and older mobile browsers require polyfills.</p>
-<ul>
-<li><a href="https://github.com/stefanpenner/es6-promise"><code>Promise</code> polyfill</a></li>
-<li><a href="https://github.com/bitinn/node-fetch"><code>Fetch</code> polyfill</a></li>
 </ul>
 <h2>Node.js Support</h2>
-<p>ArcGIS REST JS is supported in Node.js 6.x and 8.x. It requires additional packages to polyfill <code>Fetch</code> and <code>FormData</code>.</p>
+<p>Solutions.js is supported in Node.js 8.x, 10.x, and 12.x. It requires additional packages to polyfill <code>Fetch</code> and <code>FormData</code>.</p>
 <p>We recommend the ones below:</p>
 <ul>
 <li><a href="https://github.com/bitinn/node-fetch"><code>node-fetch</code></a> - to polyfill <code>Fetch</code></li>
