Added hub-common to examples

--- a/packages/common/examples/convertExtent/index.html
+++ b/packages/common/examples/convertExtent/index.html
@@ -43,7 +43,8 @@
         "@esri/arcgis-rest-feature-layer": "https://unpkg.com/@esri/arcgis-rest-feature-layer@2.11.0/dist/umd/feature-layer.umd.min",
         "@esri/arcgis-rest-portal": "https://unpkg.com/@esri/arcgis-rest-portal@2.11.0/dist/umd/portal.umd.min",
         "@esri/arcgis-rest-request": "https://unpkg.com/@esri/arcgis-rest-request@2.11.0/dist/umd/request.umd.min",
-        "@esri/arcgis-rest-service-admin": "https://unpkg.com/@esri/arcgis-rest-service-admin@2.11.0/dist/umd/service-admin.umd.min"
+        "@esri/arcgis-rest-service-admin": "https://unpkg.com/@esri/arcgis-rest-service-admin@2.11.0/dist/umd/service-admin.umd.min",
+        "@esri/hub-common": "https://unpkg.com/@esri/hub-common@3.9.2/dist/umd/common.umd"
       }
     });
 
