site in hub-solution nominally working

--- a/demos/deploySolution/index.html
+++ b/demos/deploySolution/index.html
@@ -80,6 +80,9 @@
         "@esri/arcgis-rest-request": "node_modules/@esri/arcgis-rest-request/dist/umd/request.umd.min",
         "@esri/arcgis-rest-service-admin": "node_modules/@esri/arcgis-rest-service-admin/dist/umd/service-admin.umd.min",
         "@esri/hub-common": "node_modules/@esri/hub-common/dist/umd/common.umd",
+        "@esri/hub-sites": "node_modules/@esri/hub-sites/dist/umd/sites.umd",
+        "@esri/hub-initiatives": "node_modules/@esri/hub-initiatives/dist/umd/initiatives.umd",
+        
         // load the unminified so we can debug things
         "@esri/solution-common": "node_modules/@esri/solution-common/dist/umd/common.umd",
         "@esri/solution-deployer": "node_modules/@esri/solution-deployer/dist/umd/deployer.umd",
