--- a/demos/deploySolution/index.html
+++ b/demos/deploySolution/index.html
@@ -41,21 +41,23 @@
       <div class="col-sm-6 col-sm-offset-3">
         <div id="input" class="form-group" style="display:none">
           <label for="solutionId">Enter a Solution ID:</label>
-          <input class="form-control" type="text" id="solutionId">
+          <input class="form-control" type="text" id="solutionId" value="b7eb538f7a2f4dcda33e75fc99e2d230">
           <label for="id">Or pick from the list below:</label>
           <select name="Solution Item" id="id" class="form-control">
             <option value="140242ff369a4da2aab7860a709d3e13">Corona Response ( 140242ff369a4da2aab7860a709d3e13 ) </option>
             <option value="5fb1779bf3424e6592d45132b472b480">Open Data Dave ( 5fb1779bf3424e6592d45132b472b480 )</option>
             <option value="a9920828b2d3419584f65bbdb5278105">Open Data Site ( a9920828b2d3419584f65bbdb5278105 )</option>
+            <option value="976f85d01d144f87b613e1ca4fabc1e3">Survey ( 976f85d01d144f87b613e1ca4fabc1e3 )</option>
+            <option value="b7eb538f7a2f4dcda33e75fc99e2d230" selected>StoryMap ( b7eb538f7a2f4dcda33e75fc99e2d230 )</option>
           </select>
           <br /><br />
           <i>Credentials in destination organization:</i><br />
           <label for="username">username:</label>
-          <input type="text" id="username" class="form-control" value="">
+          <input type="text" id="username" class="form-control" value="rweber_5_qa_pre_a_hub">
           <label for="password">password:</label>
-          <input type="password" id="password" class="form-control" value="">
+          <input type="password" id="password" class="form-control" value="test@123!">
           <label for="password">Portal:</label>
-          <input type="text" id="portal" class="form-control" value="https://www.arcgis.com/sharing/rest">
+          <input type="text" id="portal" class="form-control" value="https://qaext.arcgis.com/sharing/rest">
           <br /><br />
           <button class="btn btn-default" onclick="goFcn()">Deploy Solution</button>
         </div>
