--- a/demos/implementedTypes/index.html
+++ b/demos/implementedTypes/index.html
@@ -20,35 +20,25 @@
   -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="http://esri.github.io/calcite-bootstrap/styles/calcite-bootstrap.min.css">
-  <style>
-  button {
-    cursor: pointer;
-  }
-  td {
-    border: none;
-  }
-  li {
-    margin-bottom: 12px;
-  }
-  </style>
 </head>
 <body>
   <div id="output">Fetching...</div>
 
   <script src="https://requirejs.org/docs/release/2.3.6/minified/require.js"></script>
   <script>
-    var goFcn;
     require.config({
       paths: {
         "tslib": "node_modules/tslib/tslib",
 
         // load the local versions
-        "@esri/arcgis-rest-auth": "https://unpkg.com/@esri/arcgis-rest-auth@2.11.0/dist/umd/auth.umd.min",
-        "@esri/arcgis-rest-feature-layer": "https://unpkg.com/@esri/arcgis-rest-feature-layer@2.11.0/dist/umd/feature-layer.umd.min",
-        "@esri/arcgis-rest-portal": "https://unpkg.com/@esri/arcgis-rest-portal@2.11.0/dist/umd/portal.umd.min",
-        "@esri/arcgis-rest-request": "https://unpkg.com/@esri/arcgis-rest-request@2.11.0/dist/umd/request.umd.min",
-        "@esri/arcgis-rest-service-admin": "https://unpkg.com/@esri/arcgis-rest-service-admin@2.11.0/dist/umd/service-admin.umd.min",
-        "@esri/hub-common": "https://unpkg.com/@esri/hub-common@3.9.2/dist/umd/common.umd",
+        "@esri/arcgis-rest-auth": "node_modules/@esri/arcgis-rest-auth/dist/umd/auth.umd.min",
+        "@esri/arcgis-rest-feature-layer": "node_modules/@esri/arcgis-rest-feature-layer/dist/umd/feature-layer.umd.min",
+        "@esri/arcgis-rest-portal": "node_modules/@esri/arcgis-rest-portal/dist/umd/portal.umd.min",
+        "@esri/arcgis-rest-request": "node_modules/@esri/arcgis-rest-request/dist/umd/request.umd.min",
+        "@esri/arcgis-rest-service-admin": "node_modules/@esri/arcgis-rest-service-admin/dist/umd/service-admin.umd.min",
+        "@esri/hub-common": "node_modules/@esri/hub-common/dist/umd/common.umd",
+        "@esri/hub-sites": "node_modules/@esri/hub-sites/dist/umd/sites.umd",
+        "@esri/hub-initiatives": "node_modules/@esri/hub-initiatives/dist/umd/initiatives.umd",
 
         // load the unminified so we can debug things
         "@esri/solution-common": "node_modules/@esri/solution-common/dist/umd/common.umd",
