Update module maps to use solution-form processor.

--- a/demos/deploySolution/index.html
+++ b/demos/deploySolution/index.html
@@ -88,6 +88,7 @@
         "@esri/solution-deployer": "node_modules/@esri/solution-deployer/dist/umd/deployer.umd",
         "@esri/solution-feature-layer": "node_modules/@esri/solution-feature-layer/dist/umd/feature-layer.umd",
         "@esri/solution-file": "node_modules/@esri/solution-file/dist/umd/file.umd",
+        "@esri/solution-form": "node_modules/@esri/solution-form/dist/umd/form.umd",
         "@esri/solution-group": "node_modules/@esri/solution-group/dist/umd/group.umd",
         "@esri/solution-simple-types": "node_modules/@esri/solution-simple-types/dist/umd/simple-types.umd",
         "@esri/solution-hub-types": "node_modules/@esri/solution-hub-types/dist/umd/hub-types.umd",
