--- a/check_npm_package_versions.html
+++ b/check_npm_package_versions.html
@@ -78,6 +78,7 @@
         html += addPackageVersionsToTable("@esri/solution-group", "group");
         html += addPackageVersionsToTable("@esri/solution-simple-types", "simple-types");
         html += addPackageVersionsToTable("@esri/solution-storymap", "storymap");
+        html += addPackageVersionsToTable("@esri/solution-viewer", "viewer");
 
         html += "</table>";
         const resultsElement = document.getElementById("output");
