--- a/check_npm_package_versions.html
+++ b/check_npm_package_versions.html
@@ -79,6 +79,7 @@
         html += addPackageVersionsToTable("@esri/solution-simple-types", "simple-types");
         html += addPackageVersionsToTable("@esri/solution-storymap", "storymap");
         html += addPackageVersionsToTable("@esri/solution-viewer", "viewer");
+        html += addPackageVersionsToTable("@esri/solution-web-experience", "web-experience");
 
         html += "</table>";
         const resultsElement = document.getElementById("output");
